adding db connection for create and retrieve functionality